<resources>
    <string name="app_name">Phonebook _java</string>
    <string name="image">Image</string>
    <string name="contacts">Contacts</string>
    <string name="edit">Edit Contact</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="number">Number</string>
    <string name="details">Details</string>
    <string name="edit_btn">Edit</string>
    <string name="delete_btn">Delete</string>
    <string name="add">Add Contact</string>
    <string name="add_btn">Add</string>
    <string name="cancel_btn">Cancel</string>
</resources>