<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditActivity">

    <Button
        android:id="@+id/delete_btn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/delete_btn"
        app:backgroundTint="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_btn" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/teal_200"
        android:contentDescription="@string/image"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/acc_icon"
        tools:layout_editor_absoluteX="56dp" />


    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:inputType="text"
        android:paddingLeft="20dp"
        android:hint="@string/name"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/edit_number"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:hint="@string/number"
        android:gravity="center_vertical"
        android:inputType="number"
        android:paddingLeft="20dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_name" />

    <Button
        android:id="@+id/edit_btn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:text="@string/edit"
        app:backgroundTint="@color/teal_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_number" />

    <Button
        android:id="@+id/cancel_btn_edit"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/cancel_btn"
        app:backgroundTint="#FD9A9A9A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/delete_btn" />

    <Button
        android:id="@+id/call_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="CALL"
        app:icon="@android:drawable/stat_sys_phone_call"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cancel_btn_edit" />

</androidx.constraintlayout.widget.ConstraintLayout>